# db-repository

./: .gitignore  README.md  pyproject.toml  setup.cfg
db_repository/: base_repository.py  types.py
tests/: conftest.py
weather-fetcher/src/routers/meteostat_fetching/models/: data_structures.py  db.py  protocols.py  request_settings.py
weather-fetcher/src/routers/meteostat_fetching/services/: db_interaction.py  etl_final.py  fetching.py  serialization.py
weather-fetcher/tests/: conftest.py
weather-fetcher/tests/test_meteostat/: test_serialization.py
